# stm32f401re-cmsis-template

./: CMakeLists.txt  boot.sh  flash.sh  mem.ld  openocd.cfg
cmake/: gcc.cmake
config/: stm32f4xx_hal_conf.h
src/startup/: isr_vec.s  main.cpp  startup.s
